Atualização da página do departamento moda

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <section style="text-align: center; flex: 1; padding: 8px;">
     <h1 style="font-size: 1.5rem; margin: 0;">⚡ Ofertas Quentes Atualizadas em Tempo Real</h1>
-    <p style="margin: 4px 0 0;">Produtos direto da Amazon, Shopee e Mercado Livre com os melhores descontos!</p>
+    <p style="margin: 4px 0 0;">Produtos validados direto do Mercado Livre!</p>
   </section>
 
   <nav>
@@ -301,17 +301,6 @@
 <option value="Televisão">Televisão</option>
 <option value="Unhas">Unhas</option>
 <option value="Óculos e Acessórios">Óculos e Acessórios</option>
-        </select>
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="input-group">
-        <span class="input-group-text bg-white">🛒</span>
-        <select id="filtroPlataforma" class="form-select">
-          <option value="">Plataformas</option>
-          <option value="mercado_livre">Mercado Livre</option>
-          <option value="amazon">Amazon</option>
-          <option value="shopee">Shopee</option>
         </select>
       </div>
     </div>
