Atualização da página do departamento tecnologia

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 <option value="Bolsas e Mochilas">Bolsas e Mochilas</option>
 <option value="Brinquedos Pet">Brinquedos Pet</option>
 <option value="Cabelos">Cabelos</option>
+<option value="Cabo">Cabo</option>
 <option value="Calçados">Calçados</option>
 <option value="Calçados Esportivos">Calçados Esportivos</option>
 <option value="Celulares e Smartphones">Celulares e Smartphones</option>
@@ -1732,12 +1733,12 @@
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria = "Fones e Áudio" data-departamento = "Tecnologia" data-plataforma = "mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_953035-MLA94808789596_102025-F.webp" alt="Smart Tv LG 50 4k Uhd Hdr Thinq Ai Pro Wi-fi Bluetooth Alexa Apple Airplay - 50tu801c0sa">
+<div class="produto-card" data-subcategoria = "Cabo" data-departamento = "Tecnologia" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_974012-MLU77968824506_082024-F.webp" alt="Cabo USB-C Iphone">
   <div class="produto-info">
-    <h3>Smart Tv LG 50 4k Uhd Hdr Thinq Ai Pro Wi-fi Bluetooth Alexa Apple Airplay - 50tu801c0sa</h3>
-    <p class="preco">R$ 1899.0</p>
-    <a href="https://mercadolivre.com/sec/2rGGpAC" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Cabo USB-C Iphone</h3>
+    <p class="preco">R$ 19.0</p>
+    <a href="https://mercadolivre.com/sec/2ap2EVM" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
