Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
 <option value="Equipamentos Fitness">Equipamentos Fitness</option>
 <option value="Fones e Áudio">Fones e Áudio</option>
 <option value="Iluminação">Iluminação</option>
+<option value="Maquiagem">Maquiagem</option>
 <option value="Notebooks e Informática">Notebooks e Informática</option>
 <option value="Organização e Armazenamento">Organização e Armazenamento</option>
 <option value="Outros">Outros</option>
@@ -326,6 +327,24 @@
 
 <section class="produto-grid" id="produtos">
   
+<div class="produto-card" data-subcategoria = "Pele" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_645189-MLA81472298061_122024-F.webp" alt="Beirsdorf Nivea creme hidratante facial 7 em 1 beleza radiante 100g tipo de pele oleosa">
+  <div class="produto-info">
+    <h3>Beirsdorf Nivea creme hidratante facial 7 em 1 beleza radiante 100g tipo de pele oleosa</h3>
+    <p class="preco">R$ 44.9</p>
+    <a href="https://mercadolivre.com/sec/2HCxYq6" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_679224-MLU74542977663_022024-F.webp" alt="Rosa Mosqueta Creme Corporal Bellaphytus 100g">
+  <div class="produto-info">
+    <h3>Rosa Mosqueta Creme Corporal Bellaphytus 100g</h3>
+    <p class="preco">R$ 31.9</p>
+    <a href="https://mercadolivre.com/sec/1coApyQ" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
 <div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
   <img src="https://http2.mlstatic.com/D_NQ_NP_2X_865906-MLA94938608902_102025-F.webp" alt="Chapinha de cabelo Taiff Style preta">
   <div class="produto-info">
@@ -336,11 +355,128 @@
 </div>
 
 <div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_928596-MLB87646034052_072025-F.webp" alt="Kit Presente Portinari (3 Itens) - O Boticário">
+  <div class="produto-info">
+    <h3>Kit Presente Portinari (3 Itens) - O Boticário</h3>
+    <p class="preco">R$ 224.77</p>
+    <a href="https://mercadolivre.com/sec/1x4Pnqp" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Maquiagem" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_613725-MLU73706923316_012024-F.webp" alt="Base Com Lixa De Pés Pedicuro Reta Ou Anatomica Dompel">
+  <div class="produto-info">
+    <h3>Base Com Lixa De Pés Pedicuro Reta Ou Anatomica Dompel</h3>
+    <p class="preco">R$ 11.81</p>
+    <a href="https://mercadolivre.com/sec/2HQCDvm" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_627176-MLA88475525386_072025-F.webp" alt="Barriguinha Cream 200g Creme Redutor Firmador Anticelulite Estrias Flacidez Com Mentol e Colágeno | Drenagem Linfática Ação Refrescante Efeito Lifting Skincare Corporal Feminino Beleza Brasileira">
+  <div class="produto-info">
+    <h3>Barriguinha Cream 200g Creme Redutor Firmador Anticelulite Estrias Flacidez Com Mentol e Colágeno | Drenagem Linfática Ação Refrescante Efeito Lifting Skincare Corporal Feminino Beleza Brasileira</h3>
+    <p class="preco">R$ 120.99</p>
+    <a href="https://mercadolivre.com/sec/16JZSvv" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_898415-MLA80284155682_112024-F.webp" alt="Unha Postiça Natural Quadrada Tips Alongamento Unhas Com 48">
+  <div class="produto-info">
+    <h3>Unha Postiça Natural Quadrada Tips Alongamento Unhas Com 48</h3>
+    <p class="preco">R$ 15.58</p>
+    <a href="https://mercadolivre.com/sec/1uXSPJs" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Pele" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_834859-MLB89073870061_072025-F.webp" alt="Kit Creme Manteiga Hidratante + Esfrega Bumbum Corporal">
+  <div class="produto-info">
+    <h3>Kit Creme Manteiga Hidratante + Esfrega Bumbum Corporal</h3>
+    <p class="preco">R$ 172.19</p>
+    <a href="https://mercadolivre.com/sec/1eEKAx7" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Unhas" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_757980-MLB72003731940_102023-F.webp" alt="Removedor De Cravos Sugador Poros Acne Sucção Recarregável">
+  <div class="produto-info">
+    <h3>Removedor De Cravos Sugador Poros Acne Sucção Recarregável</h3>
+    <p class="preco">R$ 158.94</p>
+    <a href="https://mercadolivre.com/sec/1LA3DeR" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_694771-MLA90055193356_082025-F.webp" alt="Gel Umectante Preto Deep Easy Sem Dor Hotflowers 25 Gramas Sabor Sem sabor">
+  <div class="produto-info">
+    <h3>Gel Umectante Preto Deep Easy Sem Dor Hotflowers 25 Gramas Sabor Sem sabor</h3>
+    <p class="preco">R$ 24.91</p>
+    <a href="https://mercadolivre.com/sec/2kG6C9K" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
   <img src="https://http2.mlstatic.com/D_NQ_NP_2X_969300-MLB94004179643_102025-F-cortador-de-cabelo-wmark-ng-108a-transparente-100v240v.webp" alt="Cortador De Cabelo Wmark Ng-108a Transparente 100v/240v">
   <div class="produto-info">
     <h3>Cortador De Cabelo Wmark Ng-108a Transparente 100v/240v</h3>
     <p class="preco">R$ 176.78</p>
     <a href="https://mercadolivre.com/sec/2fXjLMU" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Pele" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_866443-MLA84549141502_052025-F.webp" alt="Creme Hidratante Pés Calcanhares Ressecado Homeomag Nobrevie">
+  <div class="produto-info">
+    <h3>Creme Hidratante Pés Calcanhares Ressecado Homeomag Nobrevie</h3>
+    <p class="preco">R$ 56.9</p>
+    <a href="https://mercadolivre.com/sec/1Ex3gfQ" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_929845-MLB90212037530_082025-F-aparelho-de-alta-frequncia-portatil-bivolt-limpeza-de-pele.webp" alt="Aparelho De Alta Frequência Portátil Bivolt Limpeza De Pele">
+  <div class="produto-info">
+    <h3>Aparelho De Alta Frequência Portátil Bivolt Limpeza De Pele</h3>
+    <p class="preco">R$ 151.22</p>
+    <a href="https://mercadolivre.com/sec/1cgc3uu" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787090-MLB77136393113_062024-F-aparelho-de-alta-frequncia-portatil-bivolt-limpeza-de-pele.webp" alt="Aparelho De Alta Frequência Portátil Bivolt Limpeza De Pele">
+  <div class="produto-info">
+    <h3>Aparelho De Alta Frequência Portátil Bivolt Limpeza De Pele</h3>
+    <p class="preco">R$ 152.42</p>
+    <a href="https://mercadolivre.com/sec/2ToEdnh" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Pele" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_961780-MLB88222094566_072025-F.webp" alt="Vult Vitamina C 10% - Sérum Facial Antioxidante 30ml">
+  <div class="produto-info">
+    <h3>Vult Vitamina C 10% - Sérum Facial Antioxidante 30ml</h3>
+    <p class="preco">R$ 72.65</p>
+    <a href="https://mercadolivre.com/sec/1wrunDs" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Outros" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_779534-MLB77136618683_062024-F-aparelho-alta-frequncia-eletroterapia-portatil-bivolt-limpe.webp" alt="Aparelho Alta Frequência Eletroterapia Portátil Bivolt Limpe">
+  <div class="produto-info">
+    <h3>Aparelho Alta Frequência Eletroterapia Portátil Bivolt Limpe</h3>
+    <p class="preco">R$ 148.69</p>
+    <a href="https://mercadolivre.com/sec/2RAHDYb" class="btn-comprar" target="_blank">Comprar Agora</a>
+  </div>
+</div>
+
+<div class="produto-card" data-subcategoria = "Cabelos" data-departamento = "Beleza e Cuidado" data-plataforma = "mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_818330-MLB84086875308_052025-F.webp" alt="Condicionador Beleza Negra & Co Óleo De Argan Cachos">
+  <div class="produto-info">
+    <h3>Condicionador Beleza Negra & Co Óleo De Argan Cachos</h3>
+    <p class="preco">R$ 29.9</p>
+    <a href="https://mercadolivre.com/sec/2CMH5Jh" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
