Atualização da página do departamento casa

--- a/index.html
+++ b/index.html
@@ -2149,9 +2149,9 @@
 </div>
 
 <div class="produto-card" data-subcategoria = "Outros" data-departamento = "Casa e Decoração" data-plataforma = "mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_929936-MLB84461790818_052025-F-kit-c-4-toalha-de-banho-gigante-80-x-150-atacado-brinde.webp" alt="Kit C/ 4 Toalha De Banho Gigante 80 X 1,50 Atacado + Brinde">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_929936-MLB84461790818_052025-F-kit-c-4-toalha-de-banho-gigante-80-x-150-atacado-brinde.webp" alt="testeeee">
   <div class="produto-info">
-    <h3>Kit C/ 4 Toalha De Banho Gigante 80 X 1,50 Atacado + Brinde</h3>
+    <h3>testeeee</h3>
     <p class="preco">R$ 78.99</p>
     <a href="https://mercadolivre.com/sec/2p7U6tF" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
