Atualização da página do departamento casa

--- a/index.html
+++ b/index.html
@@ -2560,9 +2560,9 @@
 </div>
 
 <div class="produto-card" data-subcategoria="Outros" data-departamento="Casa e Decoração" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_929936-MLB84461790818_052025-F-kit-c-4-toalha-de-banho-gigante-80-x-150-atacado-brinde.webp" alt="agora_vai">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_929936-MLB84461790818_052025-F-kit-c-4-toalha-de-banho-gigante-80-x-150-atacado-brinde.webp" alt="gloria">
   <div class="produto-info">
-    <h3>agora_vai</h3>
+    <h3>gloria</h3>
     <p class="preco-antigo"></p>
     <p class="preco">R$ 78.99</p>
     
