Atualização da página do departamento casa

--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
       <i class="bi bi-whatsapp"></i>
     </a>
   </nav>
+  <nav>
+    <a href="https://chat.whatsapp.com/Lckq2NTpiNGLokKJxfgv9h" 
+       title="Acesso os cupons"
+       style="color: #25D366; font-size: 1.5rem;">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+  </nav>
 </header>
 
 <section class="container my-4">
