Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
   </section>
 
   <nav>
-    <a href="https://chat.whatsapp.com/Lckq2NTpiNGLokKJxfgv9h" 
+    <a href="whatsapp://chat?code=Lckq2NTpiNGLokKJxfgv9h" 
        title="Entrar no grupo do WhatsApp"
        style="color: #25D366; font-size: 1.5rem;">
       <i class="bi bi-whatsapp"></i>
