Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
   <div class="produto-info">
     <h3>Perfume Lattafa Asad 100ml Edp Lattafa Original Nota Fiscal</h3>
     <p class="preco-antigo"><span class="preco-antigo">De R$ 299.90</span></p>
-    <p class="preco">R$ 197.36</p>
-    <p class="text-success">Economize R$102.54!</p>
-    <a href="https://mercadolivre.com/sec/2gtsqBD" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <p class="preco">R$ 214.99</p>
+    <p class="text-success">Economize R$84.91!</p>
+    <a href="https://mercadolivre.com/sec/2G4M31q" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -392,18 +392,18 @@
     <p class="preco-antigo"><span class="preco-antigo">De R$ 312.90</span></p>
     <p class="preco">R$ 259.71</p>
     <p class="text-success">Economize R$53.19!</p>
-    <a href="https://mercadolivre.com/sec/1MUNJ9u" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <a href="https://mercadolivre.com/sec/23B9rBe" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Outros" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_864163-MLA96109330801_102025-F.webp" alt="Escova Secadora Britânia 4 Em 1 Bes35 1300w Cor Preto">
+<div class="produto-card" data-subcategoria="Perfumes" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_939914-MLA82579449104_032025-F.webp" alt="Kit Lattafa Asad Lattafa + Zanzibar Edição Especial Perfume Árabe EPD Masculino 100ML + 100ML">
   <div class="produto-info">
-    <h3>Escova Secadora Britânia 4 Em 1 Bes35 1300w Cor Preto</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 147.98</span></p>
-    <p class="preco">R$ 91.75</p>
-    <p class="text-success">Economize R$56.23!</p>
-    <a href="https://mercadolivre.com/sec/1wwBbSs" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Kit Lattafa Asad Lattafa + Zanzibar Edição Especial Perfume Árabe EPD Masculino 100ML + 100ML</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 600.00</span></p>
+    <p class="preco">R$ 269.00</p>
+    <p class="text-success">Economize R$331.00!</p>
+    <a href="https://mercadolivre.com/sec/2em1C6e" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
