Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -408,13 +408,13 @@
 </div>
 
 <div class="produto-card" data-subcategoria="Outros" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_662989-MLA95683167464_102025-F.webp" alt="Escova Secadora, Mondial Bivolt ES-02-BI">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_790484-MLA84854434257_052025-F.webp" alt="Deo Parfum Una Brilho 75 Ml">
   <div class="produto-info">
-    <h3>Escova Secadora, Mondial Bivolt ES-02-BI</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 159.99</span></p>
-    <p class="preco">R$ 119.00</p>
-    <p class="text-success">Economize R$40.99!</p>
-    <a href="https://mercadolivre.com/sec/1z9uctu" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Deo Parfum Una Brilho 75 Ml</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 319.00</span></p>
+    <p class="preco">R$ 191.40</p>
+    <p class="text-success">Economize R$127.60!</p>
+    <a href="https://mercadolivre.com/sec/1Bp54ib" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
