Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
   </section>
 
   <nav>
-    <a href="https://web.whatsapp.com/accept?code=Lckq2NTpiNGLokKJxfgv9h" 
-       title="Entrar no grupo do WhatsApp"
-       style="color: #25D366; font-size: 1.5rem;">
+    <a href="javascript:void(0);" onclick="enterGroup()" 
+      title="Entrar no grupo do WhatsApp"
+      style="color: #25D366; font-size: 1.5rem;">
       <i class="bi bi-whatsapp"></i>
     </a>
   </nav>
@@ -418,14 +418,14 @@
   </div>
 </div>
 
-<div class="produto-card" data-subcategoria="Barba e Depilação" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
-  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_661931-MLA95662464210_102025-F.webp" alt="Barbeador corporal Philips Bodygroom Bg3007/01 White Usb Shower">
+<div class="produto-card" data-subcategoria="Perfumes" data-departamento="Beleza e Cuidado" data-plataforma="mercado_livre">
+  <img src="https://http2.mlstatic.com/D_NQ_NP_2X_661931-MLA95662464210_102025-F.webp" alt="Perfume Natura Homem Elo De Parfum 100 Ml">
   <div class="produto-info">
-    <h3>Barbeador corporal Philips Bodygroom Bg3007/01 White Usb Shower</h3>
-    <p class="preco-antigo"><span class="preco-antigo">De R$ 346.53</span></p>
-    <p class="preco">R$ 239.00</p>
-    <p class="text-success">Economize R$107.53!</p>
-    <a href="https://mercadolivre.com/sec/1izoYyf" class="btn-comprar" target="_blank">Comprar Agora</a>
+    <h3>Perfume Natura Homem Elo De Parfum 100 Ml</h3>
+    <p class="preco-antigo"><span class="preco-antigo">De R$ 200.00</span></p>
+    <p class="preco">R$ 134.00</p>
+    <p class="text-success">Economize R$66.00!</p>
+    <a href="https://mercadolivre.com/sec/1xGDRdZ" class="btn-comprar" target="_blank">Comprar Agora</a>
   </div>
 </div>
 
@@ -3942,7 +3942,7 @@
 
 <footer class="footer">
   <p>© 2025 PromoFinderML — Desenvolvido com ❤️ por Victor. Dados coletados via Web Scraping.</p>
-  <p><a href="https://chat.whatsapp.com/Lckq2NTpiNGLokKJxfgv9h">Entre no grupo para receber ofertas exclusivas</a></p>
+  <p><a href="javascript:void(0);" onclick="enterGroup()">Entre no grupo para receber ofertas exclusivas</a></p>
 </footer>
 
 <script src="filtros.js"></script>
